# xiaosu-ai-assistant

./: .env.example  .gitattributes  .gitignore  AI_USAGE.md  README.md  docker-compose.yml  自评.md
apps/api/: .dockerignore  .gitkeep  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/agents/: __init__.py  agent.py  greeting.py  prompts.py  tool_registry.py
apps/api/app/api/: __init__.py  routes_admin_documents.py  routes_admin_logs.py  routes_admin_settings.py  routes_chat.py  routes_health.py  routes_im.py  routes_im_dingtalk.py  routes_mock_api.py
apps/api/app/api/admin/: __init__.py  documents.py  logs.py  settings.py
apps/api/app/core/: __init__.py  config.py  errors.py  logging.py  observability.py  pricing.py  redis_client.py  security.py
apps/api/app/db/: __init__.py  base.py  session.py
apps/api/app/im/: __init__.py  base.py  dingtalk.py  feishu.py  feishu_stream.py  formatter.py
apps/api/app/llm/: __init__.py  anthropic_provider.py  base.py  embedding.py  openai_compatible.py
apps/api/app/mcp/: __init__.py  http.py  runtime.py  server.py
apps/api/app/models/: __init__.py  chunk.py  conversation.py  document.py  message.py  setting.py  tool_call_log.py
apps/api/app/parsers/: __init__.py  base.py  docx_parser.py  markdown_parser.py  pdf_parser.py  txt_parser.py
apps/api/app/schemas/: auth.py  chat.py  document.py
apps/api/app/services/: __init__.py  chat_service.py  conversation_service.py  document_service.py  indexing_service.py  retrieval_service.py  setting_service.py
apps/api/app/tools/: attendance_tool.py  base.py  employee_tool.py  internal_api.py  knowledge_tool.py  orders_tool.py  time_tool.py
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 0001_init_pgvector_and_tables.py  0002_add_document_chunk_deleted_at.py  0003_change_embedding_dimension_to_1024.py
apps/api/tests/: __init__.py  test_agent_multiturn_regression.py  test_agent_tool_call.py  test_auth.py  test_chat_stream_safe_parsing.py  test_enhancements.py  test_greeting.py  test_health.py  test_im_adapter.py  test_indexing_embed_text.py  test_llm_provider.py  test_parsers.py  test_settings_model_switch.py
apps/web/: .dockerignore  .gitkeep  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
data/mock/: .gitkeep  attendance.json  employees.json  orders.json
docs/: .gitkeep  rag-database-design.md  web-app-readme.md  代码规范符合性审查报告.md  增强项开发计划.md  必做清单对账与优化计划.md  真实联调记录.md
logs/: .gitkeep
scripts/: README.md  eval.py  eval.sh  lint.sh  migrate.sh  reindex_all.py  seed.sh  seed_knowledge.sh  start.sh  test.sh  verify_delete_restore.py  verify_recall.py
(+67 files in other folders)
