[project]
name = "xiaosu-api"
version = "0.1.0"
description = "小苏 AI 助手后端（FastAPI + RAG + 自研 Tool Calling Agent）"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "loguru>=0.7.0",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.2.0",
]

# 第 1 阶段为最小骨架；SQLAlchemy/Alembic/pgvector/解析器留待第 2-3 阶段按需加入
[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
# RUF001/002/003 检查中文全角标点（，：；（）等），对中文项目属正常用法，忽略
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
