[project]
name = "xiaosu-api"
version = "0.1.0"
description = "小苏 AI 助手后端（FastAPI + RAG + 自研 Tool Calling Agent）"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "loguru>=0.7.0",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.18",
]

# 运行时依赖：FastAPI 服务 + 数据库（SQLAlchemy/Alembic/pgvector）
# 文档解析器（pypdf/python-docx 等）将在第 3 阶段按需加入
[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
# RUF001/002/003 检查中文全角标点（，：；（）等），对中文项目属正常用法，忽略
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI 的 Depends/Query/Path/Header 作为依赖注入默认值是官方用法，豁免 B008
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Body",
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
